--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'HX'
 - !lcsh 'Aphorisms and apothegms'
 - !lcc 'PR'
+- GITenberg
 title: Miscellaneous Aphorisms; The Soul of Man
 url: http://www.gutenberg.org/ebooks/33979
